--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "babel-core": "^5.8.19",
     "babel-loader": "^5.3.2",
     "extract-text-webpack-plugin": "^0.8.2",
+    "json-loader": "^0.5.2",
     "loader-utils": "^0.2.11",
     "lodash": "^3.10.0",
     "node-sass": "^3.2.0",
+    "null-loader": "^0.1.1",
     "promise": "^7.0.3",
     "raw-loader": "^0.5.1",
     "react": "^0.13.3",
