--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "babel-core": "^5.8.19",
     "babel-loader": "^5.3.2",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
     "json-loader": "^0.5.2",
     "loader-utils": "^0.2.11",
     "lodash": "^3.10.0",
+    "mime": "^1.3.4",
     "node-sass": "^3.2.0",
     "null-loader": "^0.1.1",
     "promise": "^7.0.3",
@@ -21,9 +26,14 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "sass-loader": "^1.0.3",
-    "webpack": "^1.10.5"
+    "webpack": "^1.10.5",
+    "webpack-stream": "^2.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^0.15.6",
+    "gulp-util": "^3.0.6",
+    "style-loader": "^0.12.3"
+  },
   "scripts": {
     "test": "webpack"
   },
