--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "babel": "^5.8.19",
     "babel-core": "^5.8.19",
     "babel-loader": "^5.3.2",
+    "del": "^1.2.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
+    "gulp-debug": "^2.0.1",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-rev": "^5.1.0",
     "image-webpack-loader": "^1.6.1",
     "json-loader": "^0.5.2",
     "loader-utils": "^0.2.11",
@@ -24,6 +28,7 @@
     "raw-loader": "^0.5.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "run-sequence": "^1.1.2",
     "sass-loader": "^1.0.3",
     "webpack": "^1.10.5",
     "webpack-stream": "^2.1.0"
