work in progress

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "webpack loader for lifting sass as css into entry",
   "main": "index.js",
+  "scripts": {
+    "start": "gulp"
+  },
   "directories": {
     "example": "example"
   },
