--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "webpack loader for lifting sass as css into entry",
   "main": "index.js",
   "scripts": {
-    "start": "gulp"
+    "test": "webpack"
   },
   "directories": {
     "example": "example"
   },
   "dependencies": {
-    "babel": "^5.8.19",
+    "babel": "^5.8.21",
     "babel-core": "^5.8.19",
     "babel-loader": "^5.3.2",
     "del": "^1.2.0",
@@ -33,6 +33,7 @@
     "react-router": "^0.13.3",
     "run-sequence": "^1.1.2",
     "sass-loader": "^1.0.3",
+    "scan-dependencies": "^1.0.0",
     "webpack": "^1.10.5",
     "webpack-stream": "^2.1.0"
   },
@@ -40,9 +41,6 @@
     "css-loader": "^0.15.6",
     "gulp-util": "^3.0.6",
     "style-loader": "^0.12.3"
-  },
-  "scripts": {
-    "test": "webpack"
   },
   "repository": {
     "type": "git",
