updated example for node-sass threadpool issue

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "webpack loader for lifting sass as css into output files",
   "main": "index.js",
   "scripts": {
+    "start": "gulp",
     "test": "webpack"
   },
   "directories": {
