--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.19",
     "babel-loader": "^5.3.2",
+    "crypto": "0.0.3",
     "del": "^1.2.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
@@ -23,6 +24,7 @@
     "json-loader": "^0.5.2",
     "loader-utils": "^0.2.11",
     "lodash": "^3.10.0",
+    "manifest-loader": "git+https://github.com/adjavaherian/manifest-loader.git",
     "mime": "^1.3.4",
     "node-sass": "^3.2.0",
     "null-loader": "^0.1.1",
@@ -37,8 +39,9 @@
   "devDependencies": {
     "css-loader": "^0.15.6",
     "gulp-util": "^3.0.6",
+    "image-webpack-loader": "^1.6.1",
     "style-loader": "^0.12.3",
-    "image-webpack-loader": "^1.6.1"
+    "url-loader": "^0.5.6"
   },
   "repository": {
     "type": "git",
